gcc/testsuite/rust/rustc/ui/issues/issue-83048_dg.rs
//@ compile-flags: -Z unpretty=thir-tree

pub fn main() {
    break; // { dg-error ".E0268." "" { target *-*-* } }
}

